--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -54,7 +54,7 @@ services:
     image: docker.n8n.io/n8nio/n8n
     restart: always
     ports:
-      - "${N8N_PORT:-5678}:5678"
+      - "${N8N_PORT}:5678"
     environment:
       - N8N_PORT=${N8N_PORT:-5678}
       - SERVICE_FQDN_N8N_5678
